<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp" />
        <TextView
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textAlignment="center"
            android:padding="8dp" />
        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textAlignment="center"
            android:padding="8dp" />

        <EditText
            android:id="@+id/beratEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:hint="@string/hint"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/tinggiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/usiaEditText"
            android:padding="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:inputType="number"/>

        <RadioGroup
            android:id="@+id/jenisKelaminGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priaRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelaminl" />

            <RadioButton
                android:id="@+id/wanitaRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelaminp" />
        </RadioGroup>

        <Button
            android:id="@+id/hitungButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitung"/>

        <TextView
            android:id="@+id/hasilTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingTop="16dp"/>
    </LinearLayout>
</ScrollView>
